Fix alignment and spacing around comment box

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -339,7 +339,7 @@ body>.content { z-index: 3; position: relative; border-radius: 2px; margin: 0 0 
 .commentarea .menuarea .spacer .drop-choices>:last-child { border-bottom-right-radius: 2px; border-bottom-left-radius: 2px }
 .commentarea .menuarea .spacer .drop-choices a { background: rgba(60, 60, 60, .9); padding: 6px 24px; color: #EEE; text-transform: capitalize; text-align: left }
 .commentarea .menuarea .spacer .drop-choices a:hover { background: rgba(60, 60, 60, .95) }
-.commentarea .usertext-edit { width: 100%; max-width: 500px; margin: 20px auto 60px }
+.commentarea .usertext-edit { width: 100%; max-width: 500px; margin: 20px 0 10px }
 .commentarea .usertext-edit .usertext-buttons button { background: rgba(0, 0, 0, .05); font-size: 11px; letter-spacing: 2px; color: #777; margin-top: 0 }
 .commentarea .usertext-edit .usertext-buttons button:hover { background: rgba(0, 0, 0, .15) }
 .commentarea .usertext-edit .usertext-buttons button:active { background: rgba(0, 0, 0, .25) }
